src/test/deca/codegen/extension/valid/oracle/TAB_access_index.deca
{
    int x = 0;
    int y = 5;
    float[] a = new float[8];
    float[][] b = new float[7][6];

    a[x];
    b[x][y];
    a[x] = x;
    a[x] = b[x][5];
    b[x] = a;
}