src/test/deca/codegen/extension/invalid/oracle/TAB_size_max.deca
{
    int[] a = new int[9999];
}